# SmartCalc_v1.0

./: README.md
src/: Makefile  dvi.html
src/SmartCalcBack/: Makefile  main.c  smart_calc.c  smart_calc.h
src/SmartCalcBack/list_operations/: free_list.c  list.h  peep.c  pop.c  push.c  reverse_list.c
src/SmartCalcBack/operation_functions/: calculate_station.c  operation_functions.h  parser.c  validator.c
src/SmartCalcBack/tests/: smart_calc_tests  test_calculate_station  test_free_list  test_parser  test_peep  test_pop  test_push  test_reverse_list  test_smart_calc  test_validator  tests_header
src/SmartCalcFront/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  plot.cpp  plot.h  plot.ui
